nominate dropdown changes,gap issue for search result,convert album result to grid

--- a/src/Containers/SearchResult/SearchResult.scss
+++ b/src/Containers/SearchResult/SearchResult.scss
@@ -1,13 +1,19 @@
 @import "../../assets/SCSS/Vars.scss";
 .search-result{
     padding-bottom: 100px;
-    .cd-case {
-        padding: 3px 4px 5px 20px;
-        margin: 20px 20px 20px 0px;
-        width: 201px;
-        height: 201px;
+    // .cd-case {
+    //     padding: 3px 4px 5px 20px;
+    //     margin: 20px 20px 20px 0px;
+    //     width: 201px;
+    //     height: 201px;
+    // }
+    #search-album {
+        padding: 10px;
     }
-
+    #search-album .album-grid {
+        grid-column-gap: 25px;
+        column-gap: 25px;
+    }
     .album-title {
         font-size: 14px;
         line-height: 18px;
@@ -23,7 +29,9 @@
         color: #FFFFFF;
         :first-child {
             font-size: 18px;
-            line-height: 23px;
+            color: #fff;
+            margin-bottom: 3px;
+            margin-top: 15px;
         }
         :nth-child(2) {
             font-size: 14px;
